# ml-depression-classification

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
depression_classification/: __init__.py  data_loader.py  data_models.py  depression_detection_config.py  depression_pipeline.py  lit_model.py  model.py  packaging_model.py  plotting_metrics.py  test_bad_lint.py
exploratory_analysis/: clean_and_split.py  eda.ipynb
inference/: inference.py
model_building/: train.py
tests/: test_data_loader.py
