[project]
version = "1.0.0"
name = "depression_classification"
description = "Python package to train a classifier to determine if a comment may indicate depression."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas==1.5.2",
    "transformers==4.24.0",
    "torch==1.13.0",
    "pytorch_lightning==1.8.3",
    "smart_open==6.2.0",
    "cloudpathlib==0.10.0",
    "pydantic==4.4.0",
    "tensorboard==2.11.0",
]

[project.optional-dependencies]
dev = [
    # for eda
    "jupyter==1.0.0",
    "matplotlib==3.6.2",
    "langdetect==1.0.9",
    "scikit-learn==1.1.3",
    # for testing
    "flake8==3.8.4",
    "pytest==6.1.1",
    "pytest-asyncio==0.14.0",
    "pytest-cov==3.0.0",
    "pytest-mock==3.6.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
